Add tests, add jacoco config and report